# dev-company-harness

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  ROADMAP.md  init.sh  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  aws-latest-architect.md  developer.md  proposal-auditor.md  researcher.md  reviewer.md  secretary.md  terraform-latest-advisor.md
.claude/agents/references/: common-base-rules.md  primary-sources-allowlist.md
.claude/skills/work-abandon/: SKILL.md
.claude/skills/work-advance/: SKILL.md
.claude/skills/work-doctor/: SKILL.md
.claude/skills/work-init/: SKILL.md
.claude/skills/work-list/: SKILL.md
.claude/skills/work-return/: SKILL.md
.claude/skills/work-run/: SKILL.md
.claude/skills/work-status/: SKILL.md
.claude/skills/work-switch/: SKILL.md
.github/workflows/: gitleaks.yml
config/: workspace-registry.example.toml  workspace-registry.example.yml
docs/adr/: 0001-fork-writing-harness-for-dev-work.md
harness/: __init__.py  cli.py  core.py  registry.py
observability/: pricing.json
scripts/: guard_writes.py
secretary/: policy.md  profile.example.md
templates/: commit.md  dod.json  facts.json  findings.md  plan.md  review.json
workflows/: dev-task.json
